# Matcha-TTS

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  synthesis.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: ci.yml
configs/callbacks/: early_stopping.yaml  model_checkpoint.yaml
configs/data/: jsut.yaml  jvs.yaml  jvs_precomputed.yaml
configs/experiment/: jsut.yaml  jvs.yaml  jvs_fast.yaml
configs/model/: matcha.yaml
configs/model/cfm/: midpoint.yaml
configs/model/optimizer/: adam.yaml  adam_scaled.yaml
configs/model/scheduler/: warmup_cosine.yaml
configs/trainer/: ddp_optimized.yaml  default.yaml
docs/: japanese-tts-implementation-plan.md
matcha/: app.py  cli.py  train.py
matcha/callbacks/: profiling_callback.py
matcha/data/: precomputed_datamodule.py  text_mel_datamodule.py
matcha/hifigan/: README.md
matcha/models/: baselightningmodule.py  matcha_tts.py
matcha/models/components/: decoder.py  flow_matching.py  text_encoder.py  transformer.py
matcha/onnx/: export.py  infer.py
matcha/text/: __init__.py  cleaners.py  symbols.py
matcha/utils/: instantiators.py  logging_utils.py  model.py  rich_utils.py  utils.py
matcha/utils/monotonic_align/: __init__.py
scripts/: precompute_dataset.py  prepare_jsut.py  prepare_jvs.py  transfer_from_english.py
tests/: test_data.py  test_decoder.py  test_flow_matching.py  test_hifigan.py  test_matcha_tts.py  test_monotonic_align.py  test_onnx_ja.py  test_text.py  test_text_encoder.py  test_text_ja.py  test_utils.py
