[project]
name = "matcha-tts"
dynamic = ["version"]
description = "Matcha-TTS: A fast TTS architecture with conditional flow matching"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Shivam Mehta", email = "shivam.mehta25@gmail.com" },
]

dependencies = [
    # pytorch
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
    "torchaudio",
    # hydra
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    # audio / text
    "phonemizer",
    "librosa",
    "scipy",
    "inflect",
    "Unidecode",
    # model components
    "conformer==0.3.2",
    "diffusers",
    "einops",
    # utilities
    "rootutils",
    "rich",
    "tensorboard",
    "numpy",
    "Cython",
    "gdown",
    "wget",
]

[project.optional-dependencies]
onnx = [
    "onnxruntime>=1.14.0",
    "onnx>=1.14.0",
]
onnx-gpu = [
    "onnxruntime-gpu>=1.14.0",
    "onnx>=1.14.0",
]
app = [
    "gradio==3.43.2",
]
logging = [
    "wandb",
    "neptune-client",
    "mlflow",
    "comet-ml",
    "aim>=3.16.2",
]

[dependency-groups]
dev = [
    "pre-commit",
]
test = [
    "pytest",
]
notebook = [
    "notebook",
    "ipywidgets",
    "matplotlib",
    "seaborn",
    "pandas",
]

[project.scripts]
matcha-data-stats = "matcha.utils.generate_data_statistics:main"
matcha-tts = "matcha.cli:cli"
matcha-tts-app = "matcha.app:main"
matcha-tts-get-durations = "matcha.utils.get_durations_from_trained_model:main"

[project.urls]
Homepage = "https://shivammehta25.github.io/Matcha-TTS"

[build-system]
requires = ["setuptools", "wheel", "cython==0.29.35", "numpy==1.24.3", "packaging"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { file = "matcha/VERSION" }

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "examples", "examples.*"]

[tool.setuptools.package-data]
matcha = ["VERSION", "**/*.json", "**/*.html", "**/*.png", "**/*.md", "**/*.pyx"]

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
