[project]
name = "matcha-tts"
dynamic = ["version"]
description = "Matcha-TTS: A fast TTS architecture with conditional flow matching"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Shivam Mehta", email = "shivam.mehta25@gmail.com" },
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # pytorch
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "lightning>=2.2.0",
    "torchmetrics>=1.3.0",
    "torchaudio>=2.2.0",
    # hydra
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    # audio / text
    "phonemizer",
    "librosa",
    "scipy",
    "inflect",
    "Unidecode",
    # model components
    "conformer==0.3.2",
    "diffusers",
    "einops",
    # utilities
    "rootutils",
    "rich",
    "tensorboard",
    "numpy",
    "gdown",
    "wget",
]

[project.optional-dependencies]
onnx = [
    "onnxruntime>=1.14.0",
    "onnx>=1.14.0",
]
onnx-gpu = [
    "onnxruntime-gpu>=1.14.0",
    "onnx>=1.14.0",
]
app = [
    "gradio>=4.0",
]
logging = [
    "wandb",
    "neptune-client",
    "mlflow",
    "comet-ml",
    "aim>=3.16.2",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
]
notebook = [
    "notebook",
    "ipywidgets",
    "matplotlib",
    "seaborn",
    "pandas",
]

[project.scripts]
matcha-data-stats = "matcha.utils.generate_data_statistics:main"
matcha-tts = "matcha.cli:cli"
matcha-tts-app = "matcha.app:main"
matcha-tts-get-durations = "matcha.utils.get_durations_from_trained_model:main"

[project.urls]
Homepage = "https://shivammehta25.github.io/Matcha-TTS"

[build-system]
requires = ["setuptools", "wheel", "cython>=3.0.8", "numpy>=1.26.0,<2.0", "packaging"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { file = "matcha/VERSION" }

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "examples", "examples.*"]

[tool.setuptools.package-data]
matcha = ["VERSION", "**/*.json", "**/*.html", "**/*.png", "**/*.md", "**/*.pyx"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".eggs", ".git", ".hg", ".mypy_cache", ".tox", ".venv",
    "_build", "buck-out", "build", "dist",
    "logs", "data", "matcha/hifigan",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PLC",  # pylint convention
    "PLE",  # pylint error
    "PLW",  # pylint warning
]
ignore = [
    "E203",   # whitespace before ':'
    "E402",   # module level import not at top
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "F401",   # unused import
    "F841",   # local variable assigned but never used
    "UP015",  # unnecessary open mode parameters
    "B007",   # unused loop variable
    "B905",   # zip without strict
    "SIM108", # use ternary operator
    "SIM117", # nested with statements (gradio pattern)
    "PLW0603", # global statement
    "PLW0602", # global variable not assigned
    "PLW2901", # redefined loop variable
    "PLC0415", # import not at top level
    "B028",   # no stacklevel in warnings.warn
    "E731",   # lambda assignment
    "UP035",  # deprecated typing imports (Dict, List, Tuple)
]

[tool.ruff.lint.isort]
known-first-party = ["matcha"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.run]
source = ["matcha"]
omit = [
    "matcha/hifigan/*",
    "matcha/app.py",
    "matcha/train.py",
]

[tool.coverage.report]
fail_under = 40
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
